[gd_scene load_steps=7 format=3 uid="uid://dt37kqcieajr3"]

[ext_resource type="Script" uid="uid://girqyk78eeab" path="res://Menus/main_menu.gd" id="1_g58hc"]
[ext_resource type="Texture2D" uid="uid://byiynulf8kw3l" path="res://Menus/Assets/main menu buttons.png" id="1_ns4o4"]
[ext_resource type="Theme" uid="uid://b4o5tnm6aot0t" path="res://assets/typing_content/typing_theme.tres" id="2_g58hc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g58hc"]
bg_color = Color(0.314316, 0.314316, 0.314316, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jca3q"]
bg_color = Color(0.314316, 0.314316, 0.314316, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ch0s"]
bg_color = Color(0.314316, 0.314316, 0.314316, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 5.0
offset_right = 3.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_g58hc")

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0.862745)
self_modulate = Color(1, 1, 1, 0)
top_level = true
light_mask = 2
visibility_layer = 2
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.0
offset_top = 241.0
offset_right = 408.0
offset_bottom = 398.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_g58hc")
theme_override_styles/hover = SubResource("StyleBoxFlat_jca3q")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3ch0s")

[node name="Button2" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
top_level = true
light_mask = 2
visibility_layer = 2
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -368.0
offset_top = -116.0
offset_right = 416.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30

[node name="Button3" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
top_level = true
light_mask = 2
visibility_layer = 2
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -373.0
offset_top = -469.0
offset_right = 411.0
offset_bottom = -312.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.519
anchor_top = 0.471
anchor_right = 0.519
anchor_bottom = 0.471
offset_left = -998.48
offset_top = -525.68
offset_right = 917.52
offset_bottom = 554.32
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ns4o4")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = -67.0
offset_right = 191.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_g58hc")
theme_override_font_sizes/normal_font_size = 44
text = "Credits"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 287.0
offset_right = 126.0
offset_bottom = 361.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_g58hc")
theme_override_font_sizes/normal_font_size = 44
text = "Quit"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -420.0
offset_right = 118.0
offset_bottom = -362.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_g58hc")
theme_override_font_sizes/normal_font_size = 44
text = "Play"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
